--- a/index.html
+++ b/index.html
@@ -15,6 +15,39 @@
       :root { --fg:#e6e7eb; --bg:#0b0b0e; --muted:#a1a1aa; --card:#121217; --border:#232329; }
     }
     *{box-sizing:border-box}
+    
+    #This reads your version.json (which your GitHub Action already writes).
+<script>
+  async function loadVersionData() {
+    try {
+      const res = await fetch('version.json', {cache: 'no-store'});
+      if (!res.ok) throw new Error('no version.json');
+      const data = await res.json();
+
+      // Version (tag or short SHA)
+      const version = data.tag ? data.tag : data.short_sha;
+      document.getElementById('version-info').textContent = `Version: ${version}`;
+
+      // Published date (use build_time if available)
+      if (data.build_time) {
+        const date = new Date(data.build_time);
+        const formatted = date.toLocaleDateString('en-GB', {
+          year: 'numeric', month: 'long', day: 'numeric'
+        });
+        document.getElementById('published-info').textContent = `Published: ${formatted}`;
+      } else {
+        document.getElementById('published-info').textContent = '';
+      }
+
+    } catch (e) {
+      document.getElementById('version-info').textContent = '';
+      document.getElementById('published-info').textContent = '';
+    }
+  }
+
+  loadVersionData();
+</script>
+
     body{
       margin:0; background:var(--bg); color:var(--fg);
       font:16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
@@ -64,6 +97,13 @@
             <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 3a1 1 0 0 1 1 1v8.586l2.293-2.293a1 1 0 1 1 1.414 1.414l-4.004 4.004a1.25 1.25 0 0 1-1.768 0L6.93 11.707a1 1 0 1 1 1.414-1.414L10 12.586V4a1 1 0 0 1 1-1Zm-7 14a1 1 0 0 1 1 1v1h12v-1a1 1 0 1 1 2 0v1a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-1a1 1 0 0 1 1-1Z"/></svg>
             Download ePub
           </a>
+<hr style="border:none; border-top:1px solid var(--border); margin:20px 0;">
+<div class="metadata small spaced muted" id="metadata">
+  <p><strong>Title:</strong> The Blackout: Weak Signals</p>
+  <p><strong>Author:</strong> Flo</p>
+  <p id="version-info">Version: loading…</p>
+  <p id="published-info">Published: loading…</p>
+</div>
 
           <a class="btn secondary" href="https://github.com/fluxpiada/blackout/releases">
             Releases (archives)
