Change cover image and update text content
Updated the cover image and modified author and description text.

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
   <main class="wrap">
     <section class="card">
       <div>
-        <img class="cover" src="images/cover.jpg" alt="Cover of The Blackout: Weak Signals" />
+        <img class="cover" src="images/battery.png" alt="Cover of The Blackout: Weak Signals" />
       </div>
       <div>
         <h1>The Blackout: Weak Signals</h1>
-        <p class="muted">by Flo</p>
-        <p>A minimalist landing page to download the latest ePub and browse archived releases.</p>
+        <p class="muted">by F. J. S. Remmelzwaal </p>
+        <p>Use this page to download the latest ePub version of The Blackout: Weak Signals and browse archived releases.</p>
 
         <div class="row">
           <a class="btn" href="Blackout_Weak_Signals.epub" download>
