--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- =========================
+       🔹 BASIC META + HEADERS
+       ========================= -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Blackout: Weak Signals — Download</title>
@@ -8,45 +11,17 @@
   <meta property="og:title" content="The Blackout: Weak Signals" />
   <meta property="og:description" content="Download the ePub." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="images/cover.jpg" />
+  <meta property="og:image" content="images/battery.png" />
+
+  <!-- =========================
+       🎨 STYLESHEET (CSS)
+       ========================= -->
   <style>
     :root { --fg:#0b0b0e; --bg:#f7f7f8; --muted:#6b7280; --card:#ffffff; --border:#e5e7eb; }
     @media (prefers-color-scheme: dark) {
       :root { --fg:#e6e7eb; --bg:#0b0b0e; --muted:#a1a1aa; --card:#121217; --border:#232329; }
     }
     *{box-sizing:border-box}
-    
-    #This reads your version.json (which your GitHub Action already writes).
-<script>
-  async function loadVersionData() {
-    try {
-      const res = await fetch('version.json', {cache: 'no-store'});
-      if (!res.ok) throw new Error('no version.json');
-      const data = await res.json();
-
-      // Version (tag or short SHA)
-      const version = data.tag ? data.tag : data.short_sha;
-      document.getElementById('version-info').textContent = `Version: ${version}`;
-
-      // Published date (use build_time if available)
-      if (data.build_time) {
-        const date = new Date(data.build_time);
-        const formatted = date.toLocaleDateString('en-GB', {
-          year: 'numeric', month: 'long', day: 'numeric'
-        });
-        document.getElementById('published-info').textContent = `Published: ${formatted}`;
-      } else {
-        document.getElementById('published-info').textContent = '';
-      }
-
-    } catch (e) {
-      document.getElementById('version-info').textContent = '';
-      document.getElementById('published-info').textContent = '';
-    }
-  }
-
-  loadVersionData();
-</script>
 
     body{
       margin:0; background:var(--bg); color:var(--fg);
@@ -81,66 +56,105 @@
     footer{margin-top:18px; text-align:center; color:var(--muted); font-size:13px}
   </style>
 </head>
+
 <body>
+  <!-- =========================
+       📦 MAIN CONTENT WRAPPER
+       ========================= -->
   <main class="wrap">
     <section class="card">
+      
+      <!-- 🎨 LEFT COLUMN: COVER IMAGE -->
       <div>
         <img class="cover" src="images/battery.png" alt="Cover of The Blackout: Weak Signals" />
       </div>
-      <div>
-        <h1>The Blackout: Weak Signals</h1>
-        <p class="muted">by F. J. S. Remmelzwaal </p>
-        <p>Use this page to download the latest ePub version of The Blackout: Weak Signals and browse archived releases.</p>
 
+      <!-- 📝 RIGHT COLUMN: TEXT + DOWNLOADS -->
+      <div>
+        <!-- 📘 Title and Description -->
+        <h1>The Blackout: Weak Signals</h1>
+        <p class="muted">by F. J. S. Remmelzwaal</p>
+        <p>Use this page to download the latest ePub version of <em>The Blackout: Weak Signals</em> and browse archived releases.</p>
+
+        <!-- ⬇️ Download + Archive Buttons -->
         <div class="row">
           <a class="btn" href="Blackout_Weak_Signals.epub" download>
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 3a1 1 0 0 1 1 1v8.586l2.293-2.293a1 1 0 1 1 1.414 1.414l-4.004 4.004a1.25 1.25 0 0 1-1.768 0L6.93 11.707a1 1 0 1 1 1.414-1.414L10 12.586V4a1 1 0 0 1 1-1Zm-7 14a1 1 0 0 1 1 1v1h12v-1a1 1 0 1 1 2 0v1a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-1a1 1 0 0 1 1-1Z"/></svg>
+            <!-- SVG: download icon -->
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+              <path d="M12 3a1 1 0 0 1 1 1v8.586l2.293-2.293a1 1 0 1 1 1.414 1.414l-4.004 4.004a1.25 1.25 0 0 1-1.768 0L6.93 11.707a1 1 0 1 1 1.414-1.414L10 12.586V4a1 1 0 0 1 1-1Zm-7 14a1 1 0 0 1 1 1v1h12v-1a1 1 0 1 1 2 0v1a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-1a1 1 0 0 1 1-1Z"/>
+            </svg>
             Download ePub
           </a>
-<hr style="border:none; border-top:1px solid var(--border); margin:20px 0;">
-<div class="metadata small spaced muted" id="metadata">
-  <p><strong>Title:</strong> The Blackout: Weak Signals</p>
-  <p><strong>Author:</strong> Flo</p>
-  <p id="version-info">Version: loading…</p>
-  <p id="published-info">Published: loading…</p>
-</div>
 
           <a class="btn secondary" href="https://github.com/fluxpiada/blackout/releases">
             Releases (archives)
           </a>
         </div>
-<!-- Put this where you want the label, e.g. under the buttons -->
-<p class="small spaced muted">
-  Latest build served via GitHub Pages —
-  <span id="ver">loading…</span>
-</p>
 
-<script>
-  fetch('version.json', {cache: 'no-store'})
-    .then(r => r.ok ? r.json() : null)
-    .then(v => {
-      if (!v) throw new Error('no version.json');
-      const text = v.tag ? `Version: ${v.tag}` : `Commit: ${v.short_sha}`;
-      document.getElementById('ver').textContent = text;
-    })
-    .catch(() => {
-      // graceful fallback: nothing
-      const el = document.getElementById('ver');
-      if (el) el.textContent = '';
-    });
-</script>
+        <!-- 🧾 METADATA SECTION -->
+        <hr style="border:none; border-top:1px solid var(--border); margin:20px 0;">
+        <div class="metadata small spaced muted" id="metadata">
+          <p><strong>Title:</strong> The Blackout: Weak Signals</p>
+          <p><strong>Author:</strong> F. J. S. Remmelzwaal</p>
+          <p id="version-info">Version: loading…</p>
+          <p id="published-info">Published: loading…</p>
+        </div>
 
-        <p class="small spaced muted">Latest build served via GitHub Pages.</p>
+        <!-- 🪪 Version info from GitHub Pages (optional duplicate short label) -->
+        <p class="small spaced muted">
+          Latest build served via GitHub Pages —
+          <span id="ver">loading…</span>
+        </p>
+
       </div>
     </section>
 
+    <!-- ⚖️ FOOTER -->
     <footer>
       © <span id="year"></span> Flo. All rights reserved.
     </footer>
   </main>
 
+  <!-- =========================
+       ⚙️ JAVASCRIPT SECTION
+       ========================= -->
   <script>
+    // 📅 Insert current year dynamically
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // 🔄 Load version.json from GitHub Pages build
+    async function loadVersionData() {
+      try {
+        const res = await fetch('version.json', {cache: 'no-store'});
+        if (!res.ok) throw new Error('no version.json');
+        const data = await res.json();
+
+        // Version info
+        const version = data.tag ? data.tag : data.short_sha;
+        document.getElementById('version-info').textContent = `Version: ${version}`;
+        document.getElementById('ver').textContent = `Version: ${version}`;
+
+        // Published date (if available)
+        if (data.build_time) {
+          const date = new Date(data.build_time);
+          const formatted = date.toLocaleDateString('en-GB', {
+            year: 'numeric', month: 'long', day: 'numeric'
+          });
+          document.getElementById('published-info').textContent = `Published: ${formatted}`;
+        } else {
+          document.getElementById('published-info').textContent = '';
+        }
+
+      } catch (e) {
+        console.warn('Version metadata unavailable.', e);
+        document.getElementById('version-info').textContent = '';
+        document.getElementById('published-info').textContent = '';
+        document.getElementById('ver').textContent = '';
+      }
+    }
+
+    // ▶️ Run on load
+    loadVersionData();
   </script>
 </body>
 </html>
